# AOS_AAM

./: .env.example  .gitignore  .replit  .tmp_export.json  .tmp_jobs.json  .tmp_pipes.json  .tmp_plane_0.json  .tmp_plane_1.json  .tmp_plane_1_fix.json  .tmp_plane_2.json  .tmp_plane_2_fix.json  .tmp_plane_3.json  AAM_code_review_02_22.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  PLAN_RUN_ID_CONSOLIDATION.md  README.md  TECH_DEBT_REVIEW.md  aam_deferred_work.md  aam_finops_demo.md  aam_how_it_works.md  aod_last_payload.json  aod_raw_body.json  claude.md  clear_old_jobs.py  design_guidelines.md  package-lock.json  package.json  plan.md  playwright.config.js  pyproject.toml  render.yaml  replit.md  requirements.txt  run.sh  start.sh
ONGOING_PROMPTS/: AAM_AUDIT_IMPLEMENTATION.md  AAM_AUDIT_PLAN.md  AOS_COMPREHENSIVE_CLAUDEv2.md  AOS_MASTER_RACI_UPDATED.xlsx  AOS_MASTER_RACI_UPDATEDv3.xlsx  AOS_MASTER_RACI_UPDATEDv4.xlsx  AOS_MASTER_RACI_v8.1.csv  AOS_MASTER_RACIv8.csv  BUG_ANALYSIS_cff244d.md  GAP_ANALYSIS_AOD_AAM_FARM_DCL.md  GAP_ANALYSIS_UPDATED.md  aod-fabric-classification-blueprint (1).md  convergence_MA_spec_v7_3.md  ~$AOS_MASTER_RACI_UPDATEDv4.xlsx  ~$S_Trifecta_Agent_Prompts_v2.docx
app/: __init__.py  config.py  constants.py  db.py  dcl_export.py  dcl_export_old.py  fabric_drift.py  inference.py  logger.py  main.py  models.py  pii_redaction.py  plane_resolution.py  preset_config.py  salesforce.py
attached_assets/: DCL_RACI_Matrix_(1)_1769183787618.md  Pasted-AAM-Practical-Interface-what-exists-in-v1-The-only-3-op_1769119792914.txt  (+6 more)
docs/: AAM_RACI.md  (+4 more)
(+180 files in other folders)
